Added indeed scrapy

--- a/myapp/templates/crawler.html
+++ b/myapp/templates/crawler.html
@@ -25,6 +25,7 @@
                         <select id="crawl_option"  class="form-control">
                          <option  value="gdr">Glassdoor Reviews</option>
                          <option value="gdi">Glassdoor Interview Questions</option>
+                         <option value="idr">Indeed Glassdoor</option>
                        </select>
                 </p>
                 </div>
