Added, index manager, preprocess

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -35,6 +35,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/crawl">Crawler</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/indexing">Indexing</a>
+            </li>
           </ul>
         </div>
       </div>
