--- a/myapp/templates/indexing.html
+++ b/myapp/templates/indexing.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block head %}
+{% endblock %}
 {% block content %}
         <div class="post">
               <h1 class="my-4">Indexing
