--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,10 +1,27 @@
 {% extends 'base.html' %}
+{% block head %}
+
+{% endblock %}
 {% block content %}
         <div class="post">
-              <h1 class="my-4">Home
-              </h1>
-               <div>
-                <p ></p>
+                
+
+        
+              <h2 class="my-4">Results
+              </h2>
+               <!-- result row -->
+              <div class="row">
+                <div class="col-md-3">
+                  <a href="#">
+                    <img class="img-fluid rounded" src="http://placehold.it/500x300" alt="">
+                  </a>
+                </div>
+                <div class="col-md-5">
+                  <h5>Project One</h5>
+                  <p>text...</p>
+                  
+                </div>
               </div>
+              <!-- /.row -->
         </div>
 {% endblock %}
