--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Job & Interview Reviews</a>
+        <a class="navbar-brand" href="/">Job & Interview Reviews</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,7 +80,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark" >
       <div class="container">
         <p class="m-0 text-center text-white">INFORMATION RETRIVAL PROJECT - 2018</p>
       </div>
