--- a/myapp/static/css/1-col-portfolio.css
+++ b/myapp/static/css/1-col-portfolio.css
@@ -10,6 +10,7 @@ body {
   }
 }
 
+
 .pagination {
   margin-bottom: 15px;
 }
@@ -41,9 +42,9 @@ body {
     margin-top:20px;
 }
 
-
 .search-panel {
     margin:30px auto 20px auto;
+    background-color:#ffffff; 
     border:1px solid #cccccc;
     width:100%;
     max-width:700px;
