--- a/myapp/templates/results.html
+++ b/myapp/templates/results.html
@@ -48,11 +48,13 @@
               </form>
               <h5 class="search-info">
               {% if not spellcorrect == '' %}
+              {% if not spellcorrect == query %}
                   {% if is_corrected_result == 1 %}
                     No result found for '{{query}}'. '{{spellcorrect}}' is used instead.
                   {% else %}
                     Did you mean: '<a href="/search?q={{spellcorrect}}">{{spellcorrect}}</a>' ?
                   {% endif %}
+              {% endif %}
               {% endif %}
               </h5>
               <h3 >Found {{document_found_count}} Results
@@ -60,20 +62,9 @@
               
               
               {% for result in results %}
-              <div class="search-result">
-               <!-- result row -->
-                  <div class="row">
-                    <div class="col-md-15">
-                      <h5>{{result.id}}</h5>
-                      <p>{{result}}</p>
-                      
-                    </div>
-                  </div>
-              </div>
-              <!-- /.row -->
+                    {% include "result_row.html" %} 
               {% endfor %}
-              
-              
+              <!-- /.row -->
               <!--Pagination-->
                   <span class="pagination">
                   {% for link in pagination.links %}
