--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -73,7 +73,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container" style="min-height:400px">
+    <div class="container" style="min-height:400px; width:80%">
       {% block content %}
       {% endblock %}
     </div>
