--- a/myapp/templates/indexing.html
+++ b/myapp/templates/indexing.html
@@ -53,7 +53,7 @@ $( document ).ready(function() {
                          <option value="company">Companies</option>
                          <option value="glassdoor_review">Glassdoor Reviews</option>
                          <option value="glassdoor_interview">Glassdoor Interview Questions</option>
-                         <option value="indeed_review">Indeed Glassdoor</option>
+                         <option value="indeed_review">Indeed Reviews</option>
                        </select>
                        
                 </p>
