--- a/myapp/templates/crawler.html
+++ b/myapp/templates/crawler.html
@@ -46,7 +46,7 @@ $( document ).ready(function() {
                         <select id="crawl_option"  class="form-control">
                          <option  value="gdr">Glassdoor Reviews</option>
                          <option value="gdi">Glassdoor Interview Questions</option>
-                         <option value="idr">Indeed Glassdoor</option>
+                         <option value="idr">Indeed Reviews</option>
                        </select>
                 </p>
                 </div>
