--- a/myapp/templates/results.html
+++ b/myapp/templates/results.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block head %}
 <script>
+
+    var stop_words = new Array("!!","?!","??","!?","`","``","''","-lrb-","-rrb-","-lsb-","-rsb-","","",".",":",";","\"","\'","?","<",">","{","}","[","]","+","-","(",")","&","%","$","@","!","^","#","*","..","...","\'ll","\'s","\'m","a","about","above","after","again","against","all","am","an","and","any","are","aren\'t","as","at","be","because","been","before","being","below","between","both","but","by","can","can\'t","cannot","could","couldn\'t","did","didn\'t","do","does","doesn't","doing","don't","down","during","each","few","for","from","further","had","hadn\'t","has","hasn\'t","have","haven\'t","having","he","he\'d","he\'ll","he\'s","her","here","here\'s","hers","herself","him","himself","his","how","how\'s","i","i\'d","i\'ll","i\'m","i\'ve","if","in","into","is","isn't","it","it's","its","itself","let\'s","me","more","most","mustn\'t","my","myself","no","nor","not","of","off","on","once","only","or","other","ought","our","ours","","ourselves","out","over","own","same","shan\'t","she","she\'d","she\'ll","she\'s","should","shouldn\'t","so","some","such","than","that","that\'s","the","their","theirs","them","themselves","then","there","there\'s","these","they","they\'d","they\'ll","they\'re","they\'ve","this","those","through","to","too","under","until","up","very","was","wasn\'t","we","we\'d","we\'ll","we\'re","we\'ve","were","weren\'t","what","what\'s","when","when\'s","where","where\'s","which","while","who","who\'s","whom","why","why\'s","with","won\'t","would","wouldn\'t","you","you\'d","you\'ll","you\'re","you\'ve","your","yours","yourself","yourselves","return","arent","cant","couldnt","didnt","doesnt","dont","hadnt","hasnt","havent","hes","heres","hows","im","isnt","its","lets","mustnt","shant","shes","shouldnt","thats","theres","theyll","theyre","theyve","wasnt","were","werent","whats","whens","wheres","whos","whys","wont","wouldnt","youd","youll","youre","youve");
+
+
     $( document ).ready(function() {
         e=document.getElementById('search-filter');
         e.value = '{{filter_query}}'
@@ -10,25 +14,120 @@
             }else{
                 e.style.color='#777777';
         }
+        search_box = document.getElementById("search_bar_box");
+        tag_list = document.getElementById("tag_list");
+
+        var res = search_box.value.trim().split(" ");
+        var count=0;
+        for (var i = (res.length-1); i >=0 ; i--) {
+            if(res[i].length>0){
+                if(stop_words.indexOf(res[i].toLowerCase())==-1){
+                    var node = document.createElement("a");      
+                    var span = document.createElement("span");    
+                    var span1 = document.createElement("span");     
+                    span.className ="fa fa-remove";
+                    var textnode = document.createTextNode(res[i]); 
+                    span1.appendChild(textnode);
+                    node.appendChild(span1);  
+                    node.appendChild(span);  
+                    node.className ="closetagbtn";
+                    node.href = "#";
+                    node.setAttribute("onclick", "on_click_remove_word(this)");
+                    if(tag_list.childElementCount>0){
+                        tag_list.insertBefore(node, tag_list.children[0]);
+                    }else{
+                        tag_list.appendChild(node);
+                    }
+                    count++;
+                }
+            }
+        }
+        if(count==0){
+            //search_box.value
+        }
     });
+    function on_click_remove_word(e) { 
+        var search = search_box.value;
+        search= search.replace(e.children[0].innerHTML,"");
+        search= search.replace(/\s\s+/g, ' ');
+        search=search.trim();
+        search_box.value = search;
+        form = document.getElementById("search-form");
+        form.submit();
+    };
+    
+    function on_word_expander_click(e){
+        search_box = document.getElementById("search_bar_box");
+        form = document.getElementById("search-form");
+        search_box.value = search_box.value +" "+ e.innerHTML.trim();
+        form.submit();
+    }
     
     
+    function on_filter_company_click(e){
+        filter_company = document.getElementById("filter_company");
+        if(filter_company.value.length>0){
+            filter_company.value="";
+            form = document.getElementById("search-form");
+            form.submit();
+        }else{
+            var name = e.innerHTML;
+            var arr = name.split(")")
+            company_name = name.replace(arr[0]+")",'').trim();
+            filter_company.value = company_name;
+            form = document.getElementById("search-form");
+            form.submit();
+        }
+    }
+    
+    function on_filter_company_byname_click(company_name){
+            filter_company.value = company_name;
+            form = document.getElementById("search-form");
+            form.submit();
+    }
+    
+    function on_filter_type_click(e){
+        filter_company = document.getElementById("filter_company");
+        
+        search_filter = document.getElementById("search-filter");
+        if(search_filter.selectedIndex!="0"){
+            search_filter.selectedIndex ="0";
+            form = document.getElementById("search-form");
+            form.submit();
+        }else{
+            var name = e.innerHTML;
+            var arr = name.split(")")
+            company_name = name.replace(arr[0]+")",'').trim();
+            if(company_name.search("Companies")>=0){
+                search_filter.selectedIndex ="1";
+            }
+            if(company_name.search("Reviews")>=0){
+                search_filter.selectedIndex ="2";
+            }
+            if(company_name.search("Interviews")>=0){
+                search_filter.selectedIndex ="3";
+            }
+            form = document.getElementById("search-form");
+            form.submit();
+        }
+    }
   </script>
 {% endblock %}
 {% block content %}
         <div class="post">
-              <form action="/search">
+              <form id="search-form" action="/search">
+              <input id="filter_company" type="hidden" value="{{filter_query_companyname}}" name="companyname"/>
               <table class="search-panel" >
               <tr>
               <td style="width:60%">
-                 <input type="text" value = "{{query}}"  name="q"  placeholder="Search..."  id="search_box"></input>
+                 <input type="text" value = "{{query}}"  name="q"  placeholder="Search..."  id="search_bar_box"></input>
               </td>
               <td >
-                 <select id='search-filter' onchange="on_filterchange(this)" style="color:#bbbbbb;" value = "{{query}}"  name="fq"  placeholder="Search..." >
+                 <select id='search-filter' onchange="on_filterchange(this)" style="color:#bbbbbb;"  name="fq"  placeholder="Search..." >
                   <option value="*:*" style="color:#bbbbbb">Filter...</option>
                   <option value="doctype:*company" style="color:#777777">Company</option>
-                  <option value="doctype:*review" style="color:#777777">Company Reviews</option>
-                  <option value="doctype:*interview" style="color:#777777">Interview Reviews</option>
+                  <option value="doctype:*review" style="color:#777777">Company Review</option>
+                  <option value="doctype:*interview" style="color:#777777">Interview Review</option>
                  </select>
                  <script>
                     function on_filterchange(e){
@@ -48,24 +147,56 @@
               </tr> 
               </table>
               </form>
-              <h5 class="search-info">
+              <table>
+              <tr>
+              <td style="vertical-align:top; width:150px ; padding-right:20px; padding-top:50px">
+              <div>
+              {% if facet_type %}
+                <div style="border-bottom:1px solid black; margin-bottom:20px">
+               {% for type in facet_type %}
+                    <a  style="display:block; margin-bottom:10px; font-size:0.8em" href="#" class="type_filter"  onClick="on_filter_type_click(this); return false;"> {{type}} </a>
+              {% endfor %}
+                </div>
+              {% endif %}
+              
+              <div id="company_list" >
+              {% for company in facet_company %}
+                {% if not filter_query_companyname == '' %}
+                    <a  style="display:block; margin-bottom:10px; font-size:0.8em" href="#" class="company_filter "  onClick="on_filter_company_click(this); return false;"> <span style="font-size:20px" class="fa">&#xf00d;</span>{{company}} </a>
+                    {% else %}    
+                  <a  style="display:block; margin-bottom:10px; font-size:0.8em" href="#" class="company_filter"  onClick="on_filter_company_click(this); return false;"> {{company}}</a>
+                    {% endif %}
+              {% endfor %}
+              </div>
+              </div>
+              
+              </td>
+              
+              <td style="vertical-align:top;"> 
+              <div id="tag_list" style="padding-bottom:20px" >
+              {% for word in facet_word %}
+                <a href="#" class="tagbtn"  onClick="on_word_expander_click(this); return false;"> {{word}} </a>
+              {% endfor %}
+              </div>
+              
               {% if not spellcorrect == '' %}
               {% if not spellcorrect == query %}
+              <h5 class="search-info">
                   {% if is_corrected_result == 1 %}
                     No result found for '{{query}}'. '{{spellcorrect}}' is used instead.
                   {% else %}
                     Did you mean: '<a href="/search?q={{spellcorrect}}">{{spellcorrect}}</a>' ?
                   {% endif %}
-              {% endif %}
-              {% endif %}
               </h5>
+              {% endif %}
+              {% endif %}
               <h3 >Found {{document_found_count}} Results
               </h3>
-              
               
               {% for result in results %}
                     {% include "result_row.html" %} 
               {% endfor %}
+              
               <!-- /.row -->
               <!--Pagination-->
                   <span class="pagination">
@@ -79,6 +210,10 @@
                   
                   </span>
               <!--/Pagination-->
+              </td>
+              </tr>
+              </table>
+              
               
 
 
